# djangocelery

./: manage.py  pyproject.toml
shop/: models.py  tasks.py  urls.py  views.py
shop/migrations/: 0001_initial.py
testcel/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
